<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcometablelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/peacetrack_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/peaceTrack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cohortsbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:text="@string/cohort" />

    <Button
        android:id="@+id/impactbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="20dp"
        android:text="@string/impact" />

    <Button
        android:id="@+id/addactivitybutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="20dp"
        android:text="@string/quickactivity" />
    
    <Button
        android:id="@+id/addmeasurementbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="20dp"
        android:text="@string/quickmeasurement" />

</LinearLayout>