<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >
   
    <EditText
        android:id="@+id/measurementname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/measurementnamehint"
        android:inputType="textCapWords"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/darkgrey"
        android:textColorHint="#969696"
        android:textSize="17sp"
        android:textStyle="bold" />
    
    <EditText
	     android:id="@+id/measurementdescription"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginBottom="0dp"
	     android:layout_marginLeft="10dp"
	     android:layout_marginRight="10dp"
	     android:layout_marginTop="10dp"
	     android:background="@drawable/rounded_edittext"
	     android:hint="@string/measurementdescriptionhint"
	     android:inputType="textCapWords"
	     android:paddingBottom="10dp"
	     android:paddingLeft="15dp"
	     android:paddingRight="10dp"
	     android:paddingTop="10dp"
	     android:textColor="@color/darkgrey"
	     android:textColorHint="#969696"
	     android:textSize="17sp"
	     android:textStyle="bold" />
    
    <EditText
        android:id="@+id/relevantcohortname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/measurementcohortnamehint"
        android:inputType="textCapWords"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/darkgrey"
        android:textColorHint="#969696"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/associatedoutcomedata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/associatedoutcomehint"
        android:inputType="textCapWords"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/darkgrey"
        android:textColorHint="#969696"
        android:textSize="17sp"
        android:textStyle="bold" />

	 
	      <Button
	          android:id="@+id/savemeasurementbutton"
	          android:layout_width="match_parent"
	          android:layout_height="match_parent"
	          android:layout_gravity="center|bottom"
	          android:layout_marginBottom="10dp"
	          android:layout_marginEnd="10dp"
	          android:layout_marginLeft="10dp"
	          android:layout_marginRight="10dp"
	          android:layout_marginTop="50dp"
	          android:padding="10dp"
	          android:text="@string/save"
	          android:textColor="@android:color/white"
	          android:textSize="22sp"
	          android:textStyle="bold" />
    
</LinearLayout>
</ScrollView>
