<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/cohortname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/cohortnamehint"
        android:inputType="textCapWords"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/darkgrey"
        android:textColorHint="#969696"
        android:textSize="17sp"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>
    
     <EditText
         android:id="@+id/cohortdescription"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/cohortdescriptionhint"
         android:inputType="textCapWords"
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:textColor="@color/darkgrey"
         android:textColorHint="#969696"
         android:textSize="17sp"
         android:textStyle="bold" />

	      <Button
	          android:id="@+id/savecohortbutton"
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginBottom="10dp"
	          android:layout_marginLeft="10dp"
	          android:layout_marginRight="10dp"
	          android:layout_marginTop="30dp"
	          android:padding="10dp"
	          android:text="@string/save"
	          android:textColor="@android:color/white"
	          android:textSize="22sp"
	          android:textStyle="bold" />
    
</LinearLayout>
</ScrollView>
